@@ -17,7 +17,7 @@ Overall, Gnome Photo Frame is licensed the following terms:
 
 Gnome Photo Frame documentation is licensed the following terms:
 
-    Copyright (c) 2010 Cristian Marchi.
+    Copyright (c) 2010-2011 Cristian Marchi.
 
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.1
