@@ -1,3 +1,8 @@
+2011-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* help/C/gphotoframe.xml: Updated help documentation.
+	  Thanks Cristian Marchi!
+
 2011-01-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* constants.py: Added checking for user directory permissions.
